# doo

./: Cargo.toml  README.md  test.json  todos.json
src/: config.rs  lib.rs  main.rs  recent_files.json
src/app/: commands.rs  doolist.rs  lists.rs  mod.rs  queue.rs  queues.rs  recent_files.rs  ui.rs
src/app/ui/: layout.rs  mod.rs
test_files/: 2test.json  3test.json  4test.json  test.json
