[package]
name = "doo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
termion = "*"
crossterm = "0.25"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
path-clean = "1.0.1"
